src/test/resources/Parser/SyntaxErrors/ClassExtendedTwice.front
interface A {}
class B : A, A {}